[tool.poetry]
name = "project_0"
version = "0.1.0"
description = ""
authors = ["asultan123 <asultan@aucegypt.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.3"
networkx = "^2.5.1"
numba = "^0.53.1"
matplotlib = "^3.4.2"
Pyomo = "^6.0.1"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
